--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "food-ordering-app",
+  "name": "backend",
   "version": "1.0.0",
   "description": "food ordering app",
   "main": "./src/index.ts",
   "scripts": {
-    "dev":"nodemon"
+    "dev": "nodemon"
   },
   "author": "Sk Nazibul Hossain",
   "license": "ISC",
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^22.5.0",
+    "@types/node": "^22.5.1",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
