--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,8 @@
 MONGODB_CONNECTION_STRING=mongodb+srv://hossainsknazibul:Z3MCa3gmJ2Ze7hhU@cluster1.p93ql.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+
 PORT=3000
+
+# Auth0
+AUTH0_AUDIENCE='food-ordering-app-api'
+AUTH0_ISSUE_BASED_URL='https://dev-nazibul.us.auth0.com/'
+
