--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "food ordering app",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build":"npm install && npx tsc",
+    "start":"node dist/index.js"
   },
   "author": "Sk Nazibul Hossain",
   "license": "ISC",
