remove unused variable & imports

--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,6 @@ MONGODB_CONNECTION_STRING=mongodb+srv://hossainsknazibul:Z3MCa3gmJ2Ze7hhU@cluste
 PORT=3000
 
 # Auth0
-AUTH0_AUDIENCE='food-ordering-app-api'
-AUTH0_ISSUE_BASED_URL='https://dev-nazibul.us.auth0.com/'
+AUTH0_AUDIENCE=food-ordering-app-api
+AUTH0_ISSUE_BASED_URL=https://dev-nazibul.us.auth0.com/
 
