add cloudinary & multer

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,11 @@ PORT=3000
 AUTH0_AUDIENCE=food-ordering-app-api
 AUTH0_ISSUE_BASED_URL=https://dev-nazibul.us.auth0.com/
 
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=djcfz8qar
+CLOUDINARY_API_KEY=933569427367823
+CLOUDINARY_API_SECRET=jDabX760pTcbwGcjqK-13sIpQWQ
+
+
+
+
