--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon",
     "build": "npm install && npx tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "postinstall": "mkdir -p public/temp"
   },
   "author": "Sk Nazibul Hossain",
   "license": "ISC",
