--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "food ordering app",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "concurrently \"nodemon\" \"npm run stripe\"",
+    "stripe":"stripe listen --forward-to localhost:3000/api/order/checkout/webhook",
     "build": "npm install && npx tsc",
     "start": "node dist/index.js",
     "postinstall": "mkdir -p public/temp"
@@ -13,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "cloudinary": "^2.5.1",
+    "concurrently": "^9.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
