--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
+    "vite-plugin-compression": "^0.5.1",
     "zod": "^3.23.8"
   }
 }
