--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "glob": "^9.3.5",
     "lucide-react": "^0.436.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -33,9 +34,12 @@
     "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
+    "rimraf": "^4.4.1",
     "sonner": "^1.5.0",
+    "stable": "^0.1.8",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^7.0.3",
     "vite-plugin-imagemin": "^0.6.1"
   },
   "devDependencies": {
