modify accordingly for docker integration

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-MONGODB_CONNECTION_STRING=mongodb+srv://hossainsknazibul:Z3MCa3gmJ2Ze7hhU@cluster1.p93ql.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+MONGODB_CONNECTION_STRING=mongodb+srv://hossainsknazibul:Z3MCa3gmJ2Ze7hhU@cluster1.p93ql.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1 
+MONGODB_LOCAL_URL=mongodb://mongo:27017/my_database
 
 PORT=3000
 
