--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "dev": "concurrently \"nodemon\" \"npm run stripe\"",
-    "stripe":"stripe listen --forward-to localhost:3000/api/order/checkout/webhook",
+    "stripe": "stripe listen --forward-to localhost:3000/api/order/checkout/webhook",
     "build": "npm install && npx tsc",
     "start": "npx tsc && node dist/index.js",
     "postinstall": "mkdir -p public/temp"
@@ -23,7 +23,8 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
-    "stripe": "^17.3.1"
+    "stripe": "^17.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -33,7 +34,6 @@
     "@types/node": "^22.5.1",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
-    "zod": "^3.23.8"
+    "typescript": "^5.5.4"
   }
 }
