--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,12 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile.prod
+      args:
+         VITE_AUTH0_DOMAIN: ${VITE_AUTH0_DOMAIN}
+         VITE_AUTH0_CLIENT_ID: ${VITE_AUTH0_CLIENT_ID}
+         VITE_AUTH0_CALLBACK_URL: ${VITE_AUTH0_CALLBACK_URL}
+         VITE_AUTH0_AUDIENCE: ${VITE_AUTH0_AUDIENCE}
+         VITE_API_BASE_URL: ${VITE_API_BASE_URL}
     ports:
       - 5173:80
     env_file: ./frontend/.env
