--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,11 @@
     "stripe": "stripe listen --forward-to localhost:3000/api/order/checkout/webhook",
     "build": "npm install && npx tsc",
     "start": "npx tsc && node dist/index.js",
-    "postinstall": "mkdir -p public/temp"
+    "postinstall": "mkdir -p public/temp",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write .",
+    "check": "prettier --check ."
   },
   "author": "Sk Nazibul Hossain",
   "license": "ISC",
@@ -27,13 +31,17 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.5.1",
+    "eslint": "^9.39.2",
     "nodemon": "^3.1.4",
+    "prettier": "^3.7.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.49.0"
   }
 }
